--- a/style/_typography.scss
+++ b/style/_typography.scss
@@ -1,20 +1,20 @@
 h3 {
-    font-size: 32px;
+    font-size: 2rem;
     font-weight: 600;
 }
 h4 {
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 600;
 }
 h5 {
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 600;
 }
 h6 {
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 500;
 }
 p {
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 400;
 }
